[package]
name = "solid_cli"
version = "0.1.0"
authors = ["Florian Fromm <flrn.frmm@gmail.com>", "Sebastian Heusser <huhn@einfachiota.de>"]
edition = "2018"

[[bin]]
name = "solid-rs"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
anyhow = "^1.0.33"

solid_server = { path = "../solid_server" }
