[package]
name = "solid_server"
version = "0.1.0"
authors = ["Florian Fromm <flrn.frmm@gmail.com>", "Sebastian Heusser <huhn@einfachiota.de>"]
edition = "2018"

[lib]
name = "solid_server"
path = "src/lib.rs"

[dependencies]
anyhow = "^1.0.33"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
actix-web = "3.0.2"
env_logger = "0.7"

solid_storage = { path = "../solid_storage" }
