[package]
name = "solid_storage"
version = "0.1.0"
authors = ["Florian Fromm <flrn.frmm@gmail.com>", "Sebastian Heusser <huhn@einfachiota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbox = { version = "0.9.1", features = ["libsodium-bundled", "storage-file"] }
